<resources>
    <string name="app_name">Gym</string>
    <string name="str_network_alert">Please Switch on Network</string>
    <string name="str_login_with_firebaseui">Login With Firebase UI</string>

    <string name="member_list">Member List</string>
    <string name="gym_expenses">Gym Expenses</string>
    <string name="gym_location">Gym Location</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="add_expense">Add Expense</string>
    <string name="enter_trainer_name">Enter Trainer Name</string>
    <string name="enter_purchase_item">Enter Purchase Item</string>
    <string name="enter_money">Enter Money</string>
    <string name="enter_event_location">Enter Event Location</string>
    <string name="enter_event_description">Enter Event Description</string>
    <string name="enter_event_title">Enter Event Title</string>
    <string name="home">Home</string>
    <string name="total_members">Total Members</string>
    <string name="welcome">Welcome</string>
    <string name="data_time">Data,Time</string>
    <string name="active_user">Active User</string>
    <string name="inactive_user">inActive User</string>
    <string name="due_payment">Due Payment</string>
    <string name="rec_payment">Payment</string>
    <string name="search_member">Search Member</string>
    <string name="expense_list">Expense List</string>
    <string name="search_expense">Search Expense</string>
    <string name="expenses">Expenses</string>
    <string name="trainer_name">Trainer :&#160; &#160;</string>
    <string name="item_name">Item Name :&#160; &#160;</string>
    <string name="expense">Expense :&#160;&#160; </string>
    <string name="date">Date : &#160;&#160;</string>
    <string name="total_expense">Total Expense</string>
    <string name="first_name">First Name :&#160; &#160;</string>
    <string name="last_name">Last Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_batch">Enter Batch</string>
    <string name="double_tap_for_1_3_5_months_plan_only">Double_tap_for_1_3_5_months_plan_only</string>
    <string name="amount">Amount</string>
    <string name="payment_status">Payment Status</string>
    <string name="add_member">Add Member</string>
    <string name="email">Email :&#160; &#160;</string>
    <string name="batch">Batch :&#160; &#160;</string>
    <string name="enter_reminder_in_minutes">Enter Reminder In Minutes</string>
    <string name="enter_reminder">Enter Reminder</string>
    <string name="no_expense_found">No Expense Found</string>
    <string name="no_member_found">No Member Found</string>
</resources>
