<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.jp.gym.ui.dashboard.member.viewmodel.AddMemberViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!--                <com.google.android.material.appbar.AppBarLayout-->
                <!--                    android:id="@+id/AddMemberAppBar"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:background="@color/blue"-->
                <!--                    android:padding="@dimen/_10sdp"-->
                <!--                    app:layout_constraintStart_toStartOf="parent"-->
                <!--                    app:layout_constraintEnd_toEndOf="parent"-->
                <!--                    app:layout_constraintTop_toTopOf="parent">-->

                <!--                    <RelativeLayout-->
                <!--                        android:layout_width="match_parent"-->
                <!--                        android:layout_height="match_parent">-->

                <!--                        <TextView-->
                <!--                            android:layout_width="wrap_content"-->
                <!--                            android:layout_height="wrap_content"-->
                <!--                            android:layout_centerInParent="true"-->
                <!--                            android:text="@string/add_member"-->
                <!--                            android:textColor="@color/white"-->
                <!--                            android:textSize="@dimen/_20ssp"-->
                <!--                            android:textStyle="bold" />-->

                <!--                    </RelativeLayout>-->

                <!--                </com.google.android.material.appbar.AppBarLayout>-->

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstNameLbl"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:inputType="textPersonName"
                        android:text="@={viewModel.firstName}"
                        android:textAllCaps="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lastNameLbl"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/firstNameLbl">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:text="@={viewModel.lastName}"
                        android:inputType="textPersonName"
                        android:textAllCaps="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailLbl"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lastNameLbl">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_email"
                        android:text="@={viewModel.emailId}"
                        android:inputType="textEmailAddress"
                        android:textAllCaps="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mobileLbl"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailLbl">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etMobileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_mobile_number"
                        android:text="@={viewModel.mobileNumber}"
                        android:inputType="phone"
                        android:maxLength="10" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/batchLbl"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mobileLbl">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etBatch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.batch}"
                        android:hint="@string/enter_batch" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/memberShipLbl"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/batchLbl">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etMemberShipPlan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.membershipPlan}"
                        android:hint="@string/double_tap_for_1_3_5_months_plan_only"
                        android:inputType="number"
                        android:textAllCaps="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/amountLbl"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/memberShipLbl">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/amount"
                        android:text="@={viewModel.amount}"
                        android:inputType="number"
                        android:textAllCaps="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/paymentStatusLbl"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/amountLbl">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPaymentStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/payment_status"
                        android:text="@={viewModel.paymentStatus}"
                        android:inputType="text"
                        android:textAllCaps="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnOpenCalender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@color/blue"
                    android:elevation="@dimen/_10sdp"
                    android:onClick="@{(v)->viewModel.onClickAddMember(v)}"
                    android:text="@string/add_member"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:theme="@style/TransparentTheme"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/paymentStatusLbl" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


    </androidx.core.widget.NestedScrollView>
</layout>