<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.jp.gym.ui.dashboard.reminder.viewmodel.AddReminderViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/ReminderAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:padding="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/add_reminder"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_20ssp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ReminderAppBar">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/eventTitleLyt"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEventTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_event_title"
                            android:inputType="text"
                            android:textAllCaps="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/eventDescriptionLyt"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/eventTitleLyt">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEventDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_event_description"
                            android:inputType="text"
                            android:textAllCaps="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/eventLocationLyt"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/eventDescriptionLyt">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEventLocation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_event_location"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnOpenCalender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@color/blue"
                        android:elevation="@dimen/_10sdp"
                        android:text="@string/add_reminder"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:theme="@style/TransparentTheme"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/eventLocationLyt" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>