<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.jp.gym.ui.dashboard.expense.viewmodel.AddExpenseViewModel" />
    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/expenseAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue"
                android:padding="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/add_expense"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_20ssp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/expenseAppBar">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/trainerNameLyt"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etTrainerName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_trainer_name"
                            android:text="@={viewModel.trainerName}"
                            android:inputType="text"
                            android:textAllCaps="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/purchaseItemLyt"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/trainerNameLyt">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPurchaseItem"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_purchase_item"
                            android:text="@={viewModel.itemName}"
                            android:inputType="text"
                            android:textAllCaps="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/moneyLyt"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/purchaseItemLyt">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etExpenseMoney"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_money"
                            android:text="@={viewModel.expenseMoney}"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnAddExpenses"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@color/blue"
                        android:elevation="@dimen/_10sdp"
                        android:text="@string/add_expense"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:theme="@style/TransparentTheme"
                        android:onClick="@{(v)->viewModel.onClickAddExpense(v)}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/moneyLyt" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>